Closed Bug 203086 Opened 23 years ago Closed 21 years ago

fixed position 100% width table paints over the scroll bar

Categories

(Core :: Web Painting, defect, P3)

defect

Tracking

()

RESOLVED FIXED

People

(Reporter: janus, Assigned: roc)

References

()

Details

Attachments

(2 files, 2 obsolete files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.4a) Gecko/20030401 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.4a) Gecko/20030401 Visit http://www.frii.com/~janus. Notice that the menu along the top of the page paints over the window's scroll bar. It paints correctly in Camino and Safari on Mac. Windows IE doesn't honor the box position, so it is not a valid test. Reproducible: Always Steps to Reproduce: 1. Visit http://www.frii.com/~janus 2. Examine the scroll bar. Actual Results: Scroll bar is painted over Expected Results: All content should paint behind the scroll bar.
Attached file test case
Attached test case
THanks for the test case. That demonstrates the problem distinctly. I changed the CSS on my site to work around the problem by changing my values for margin-left and margin-right to padding-left and padding-right, which Mozilla seems to render correctly. So to reproduce the bug please refer to the kindly provided test case rather than the URL I provided.
-> All/All I see this on OS X 2003042208/modern skin
OS: Windows XP → All
Hardware: PC → All
Attached file Actual testcase
Attachment #121478 - Attachment is obsolete: true
of (potentially known) note: on OS X this is dependant on the theme used. (or rather the use of native widgets in the theme) Modern & Orbit: I see the table painted over the scrollbar Classic & Pinstripe: both table and divs paint below the scrollbars
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Priority: -- → P2
Attached patch This patch fixes it... (obsolete) — Splinter Review
So the problem seems to be that ConstructTableFrame does not pass the parent frame (the "real" one, not the geometric one) to CreateViewForFrame. So the z-ordering gets all fucked up. Looks like every single bit of nsCSSFrameConstructor code karnaze wrote does the same (see all the XXX comments). In a lot of these cases, it "won't matter" because stuff is not positioned, so the geometric parent is the same as the normal parent, I guess.... Roc? Thoughts?
Attachment #121489 - Flags: review?(roc+moz)
You're basically right. I should look harder at the patch and see where we really need to worry about the geometric parent being different from the content parent. I need sleep now so I'll look at this again later :-).
Comment on attachment 121489 [details] [diff] [review] This patch fixes it... This is good for 1.4. We can address the XXXs in 1.5.
Attachment #121489 - Flags: superreview+
Attachment #121489 - Flags: review?(roc+moz)
Attachment #121489 - Flags: review+
Comment on attachment 121489 [details] [diff] [review] This patch fixes it... Could this please be approved for 1.4b? Simple fix, affects nothing but fixed-pos and abs-pos tables.
Attachment #121489 - Flags: approval1.4b?
Comment on attachment 121489 [details] [diff] [review] This patch fixes it... a=asa (on behalf of drivers) for checkin to 1.4b
Attachment #121489 - Flags: approval1.4b? → approval1.4b+
Comment on attachment 121489 [details] [diff] [review] This patch fixes it... Checked in. Leaving bug open in case we want to do the further work here, but feel free to mark fixed as you wish, roc.
Attachment #121489 - Attachment is obsolete: true
Build 2003122523 WinXP This bug reoccurs in a recent nightly. The testcase is till valid.
No, in a current nightly garbage is painted over the scrollbar instead of the table painting over it. Which is very different from what this bug was about, and is covered by a different bug.
That would be bug 183495.
using a current (2004012509) trunk build on win2k, I'm not seeing garbage, I'm seeing the green/black backgrounds of the testcases overlapping the scroll bar.
*** Bug 232341 has been marked as a duplicate of this bug. ***
the site doesnt have the bug for me, but the testcases clearly have the bug. so confirming with Forebird 0.8.0+ (20040120) on XP
This is affecting chatzilla too. Text in the header is overlapping the scrollbar. See bug 232341 for a screenshot.
Starting with comment 16, this is all bug 232469, which is a totally different issue..... At this point this bug is solely a code-level bug per comment 8. Please file separate bugs on any actual rendering issues.
I'm marking this FIXED now that this testcase is fixed, we don't have another non-working testcase, and I have no desire to do general work in this area right now.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Component: Layout: View Rendering → Layout: Web Painting
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: