Pass the content parent frame to ConstructTableFrame so the view that's created goes in the right place in the z-ordering.  Bug 203086, r+sr=roc, a=asa